Add unit tests and test hooks for 100% backend coverage